--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -10,13 +10,13 @@
         android:id="@+id/CreateNewAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Profile"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/PhoneNumberField"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="25dp"
+        android:text="Sign Up"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PhoneNumberField" />
 
     <EditText
         android:id="@+id/LastNameField"
