--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -8,23 +8,38 @@
     android:background="#000C1F"
     tools:context="com.example.ankit.awareness.MyAccountActivity">
 
-    <TextView
-        android:id="@+id/device1"
-        android:layout_width="385dp"
-        android:layout_height="40dp"
-        android:text="First Device"
-        android:textSize="30sp"
-        tools:layout_editor_absoluteX="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+    <ListView
+        android:id="@+id/DeviceList"
+        android:layout_width="344dp"
+        android:layout_height="385dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
 
-    <TextView
-        android:id="@+id/device2"
-        android:layout_width="385dp"
-        android:layout_height="40dp"
-        android:text="Second Device"
-        android:textSize="30sp"
-        tools:layout_editor_absoluteX="0dp"
+    <Button
+        android:id="@+id/Refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/device1" />
+        android:text="REFRESH"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/DeviceList"
+        app:layout_constraintVertical_bias="0.49" />
+
+    <Button
+        android:id="@+id/SignOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="SIGNOUT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Refresh"
+        app:layout_constraintTop_toBottomOf="@+id/DeviceList"
+        app:layout_constraintVertical_bias="0.471" />
 </android.support.constraint.ConstraintLayout>
