--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -11,17 +11,18 @@
     <ListView
         android:id="@+id/DeviceList"
         android:layout_width="344dp"
-        android:layout_height="385dp"
+        android:layout_height="304dp"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        tools:layout_editor_absoluteY="89dp" />
 
     <Button
         android:id="@+id/Refresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/button_selector"
         android:text="REFRESH"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,16 +31,24 @@
 
     <Button
         android:id="@+id/SignOut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
+        android:background="@drawable/button_selector"
         android:text="SIGNOUT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Refresh"
         app:layout_constraintTop_toBottomOf="@+id/DeviceList"
         app:layout_constraintVertical_bias="0.471" />
+
+
+
+
+
+
+
 </android.support.constraint.ConstraintLayout>
