--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,8 @@
 
     <EditText
         android:id="@+id/EmailField"
+        android:maxLength="30"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@-_."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -39,6 +41,8 @@
 
     <EditText
         android:id="@+id/PasswordField"
+        android:maxLength="15"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
