--- a/app/src/main/res/drawable/button_round.xml
+++ b/app/src/main/res/drawable/button_round.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <!--this is to give gradient effect -->
     <gradient   android:angle="270"
-        android:startColor="#008416"
-        android:endColor="#0e0e0e"
+        android:startColor="#ffe066"
+        android:endColor="#ffe066"
         />
     <!-- this is make corners of button rounded -->
     <corners    android:topLeftRadius="40dip"
