--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="#000C1F"
     tools:context="com.example.ankit.awareness.MainActivity">
 
+
     <Button
         android:id="@+id/Login"
         android:layout_width="80dp"
@@ -24,17 +25,19 @@
         app:layout_constraintVertical_bias="0.843" />
 
     <EditText
+
         android:id="@+id/EmailField"
-        android:maxLength="30"
-        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@-_."
-        android:layout_width="wrap_content"
-        android:layout_height="37dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="100dp"
+        android:background="@null"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@-_."
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        android:maxLength="30"
         android:textColorLink="@color/colorPrimaryDark"
         android:textSize="14sp"
         android:visibility="visible"
@@ -45,19 +48,19 @@
 
     <EditText
         android:id="@+id/PasswordField"
-        android:maxLength="15"
-        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
-        android:layout_width="wrap_content"
-        android:layout_height="37dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="36dp"
+        android:background="@null"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Password"
         android:inputType="textPassword"
+        android:maxLength="15"
         android:textSize="14sp"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EmailField" />
@@ -65,7 +68,7 @@
     <Button
         android:id="@+id/ResetPassword"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
-        android:layout_width="104dp"
+        android:layout_width="99dp"
         android:layout_height="34dp"
         android:layout_marginBottom="261dp"
         android:layout_marginLeft="8dp"
@@ -77,41 +80,40 @@
         android:textStyle="italic"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.737"
+        app:layout_constraintHorizontal_bias="0.808"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PasswordField"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.562" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="25dp"
-        android:layout_height="30dp"
+        android:layout_height="41dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/EmailField"
-        app:layout_constraintHorizontal_bias="0.451"
+        app:layout_constraintHorizontal_bias="0.629"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.182"
+        app:layout_constraintVertical_bias="0.18"
         app:srcCompat="@drawable/email" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="25dp"
+        android:layout_width="23dp"
         android:layout_height="23dp"
-        android:layout_marginBottom="380dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="361dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="42dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/PasswordField"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/lock" />
 
     <android.support.constraint.Guideline
@@ -140,6 +142,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
 
 </android.support.constraint.ConstraintLayout>
