--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
@@ -10,18 +10,23 @@
 
     <ListView
         android:id="@+id/DeviceList"
-        android:layout_width="344dp"
-        android:layout_height="304dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="89dp" />
+        android:layout_width="340dp"
+        android:layout_height="200dp"
+        android:layout_above="@+id/SignOut"
+        android:layout_alignStart="@+id/piechart"
+        android:layout_marginBottom="11dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Refresh"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/DeviceList"
+        android:layout_marginBottom="23dp"
+        android:layout_marginStart="65dp"
         android:background="@drawable/button_selector"
         android:text="REFRESH"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,10 +38,9 @@
         android:id="@+id/SignOut"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_alignBottom="@+id/Refresh"
+        android:layout_marginStart="44dp"
+        android:layout_toEndOf="@+id/Refresh"
         android:background="@drawable/button_selector"
         android:text="SIGNOUT"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,10 +49,18 @@
         app:layout_constraintTop_toBottomOf="@+id/DeviceList"
         app:layout_constraintVertical_bias="0.471" />
 
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/piechart"
+        android:layout_width="340dp"
+        android:layout_height="280dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"></com.github.mikephil.charting.charts.PieChart>
 
 
 
 
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
+
