--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -8,13 +8,6 @@
     android:background="#000C1F"
     tools:context="com.example.ankit.awareness.MyAccountActivity">
 
-    <ListView
-        android:id="@+id/DeviceList"
-        android:layout_width="344dp"
-        android:layout_height="304dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="89dp" />
-
     <Button
         android:id="@+id/Refresh"
         android:layout_width="80dp"
@@ -45,10 +38,26 @@
         app:layout_constraintTop_toBottomOf="@+id/DeviceList"
         app:layout_constraintVertical_bias="0.471" />
 
+    <ListView
+        android:id="@+id/DeviceList"
+        android:layout_width="344dp"
+        android:layout_height="304dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/StatsField"
+        tools:layout_editor_absoluteX="8dp" />
 
-
-
-
+    <TextView
+        android:id="@+id/StatsField"
+        android:layout_width="333dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
