actual data on graph, added toolbar on appropriate activity. Replace buttons with actions on actionbar. Back from MyAccountActivity doesn't crash app anymore

--- a/app/src/main/res/menu/menu_my_account.xml
+++ b/app/src/main/res/menu/menu_my_account.xml
@@ -10,4 +10,8 @@
         android:title="Settings"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/refresh"
+        android:title="Refresh"
+        app:showAsAction="ifRoom"/>
+
 </menu>
