UI/Ux changes 12/3/2018 actionbar color fix

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -16,6 +16,7 @@
         android:layout_marginRight="8dp"
         android:background="@drawable/button_selector"
         android:text="Sign Up"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -31,6 +32,7 @@
         android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@-_."
         android:ems="10"
         android:hint="Email"
+        android:textColorHint="#FFFFFF"
         android:inputType="textEmailAddress"
         android:maxLength="30"
         android:textSize="14sp"
@@ -50,6 +52,7 @@
         android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:ems="10"
         android:hint="Password"
+        android:textColorHint="#FFFFFF"
         android:inputType="textPassword"
         android:maxLength="15"
         android:textSize="14sp"
