--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/button_selector"
         android:text="Login"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,6 +30,7 @@
         android:id="@+id/EmailField"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginBottom="36dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="100dp"
@@ -38,10 +40,11 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:maxLength="30"
-        android:textColorLink="@color/colorPrimaryDark"
+        android:textColor="@android:color/white"
+        android:textColorHint="#FFFFFF"
         android:textSize="14sp"
         android:visibility="visible"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintBottom_toTopOf="@+id/PasswordField"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -50,9 +53,10 @@
         android:id="@+id/PasswordField"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="8dp"
         android:background="@null"
         android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:ems="10"
@@ -60,7 +64,10 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:maxLength="15"
+        android:textColor="@android:color/white"
+        android:textColorHint="#FFFFFF"
         android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/ResetPassword"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EmailField" />
@@ -68,48 +75,45 @@
     <Button
         android:id="@+id/ResetPassword"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
-        android:layout_width="99dp"
+        android:layout_width="110dp"
         android:layout_height="34dp"
-        android:layout_marginBottom="261dp"
+        android:layout_marginBottom="280dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:elevation="0dp"
         android:text="Forgot Password"
+        android:textColor="#FFFFFF"
         android:textSize="8sp"
         android:textStyle="italic"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.808"
+        app:layout_constraintHorizontal_bias="0.799"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PasswordField"
-        app:layout_constraintVertical_bias="0.562" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="25dp"
-        android:layout_height="41dp"
+        android:layout_width="23dp"
+        android:layout_height="22dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/EmailField"
-        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202"
+        app:layout_constraintVertical_bias="0.194"
         app:srcCompat="@drawable/email" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="23dp"
-        android:layout_height="23dp"
-        android:layout_marginBottom="304dp"
+        android:layout_height="22dp"
+        android:layout_marginBottom="357dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="55dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/PasswordField"
         app:layout_constraintStart_toStartOf="parent"
