--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="152dp"
         android:ems="10"
         android:hint="Email"
+        android:textColorHint="#FFFFFF"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +34,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/button_selector"
         android:text="Reset"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
