--- a/app/src/main/res/layout/activity_add_device.xml
+++ b/app/src/main/res/layout/activity_add_device.xml
@@ -20,6 +20,7 @@
         android:hint="Device Password"
         android:inputType="textPassword"
         android:textSize="14sp"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/LinkDevice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -37,6 +38,7 @@
         android:layout_marginTop="49dp"
         android:ems="10"
         android:hint="Device ID"
+        android:textColorHint="#FFFFFF"
         android:inputType="textPersonName"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/DevicePasswordField"
@@ -54,6 +56,7 @@
         android:layout_marginStart="8dp"
         android:background="@drawable/button_selector"
         android:text="Link Device"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
