--- a/app/src/main/res/layout/activity_logo.xml
+++ b/app/src/main/res/layout/activity_logo.xml
@@ -16,6 +16,7 @@
         android:layout_marginStart="8dp"
         android:background="@drawable/button_selector"
         android:text="Log in"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -34,6 +35,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/button_selector"
         android:text="Register"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
