--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -14,6 +14,7 @@
         android:layout_height="300dp"
         android:layout_below="@+id/piechart"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="9dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,8 +24,7 @@
         android:layout_width="340dp"
         android:layout_height="275dp"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/DeviceList"
-        android:layout_marginTop="13dp"></com.github.mikephil.charting.charts.PieChart>
+        android:layout_alignStart="@+id/DeviceList"></com.github.mikephil.charting.charts.PieChart>
 
 </RelativeLayout>
 
