--- a/app/src/main/res/layout/activity_add_device.xml
+++ b/app/src/main/res/layout/activity_add_device.xml
@@ -21,6 +21,7 @@
         android:inputType="textPassword"
         android:textSize="14sp"
         android:textColorHint="#FFFFFF"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/LinkDevice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -39,6 +40,7 @@
         android:ems="10"
         android:hint="Device ID"
         android:textColorHint="#FFFFFF"
+        android:textColor="@android:color/white"
         android:inputType="textPersonName"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/DevicePasswordField"
@@ -49,7 +51,7 @@
 
     <Button
         android:id="@+id/LinkDevice"
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_marginBottom="96dp"
         android:layout_marginEnd="8dp"
