--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -9,15 +9,16 @@
 
     <EditText
         android:id="@+id/ResetPasswordField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="152dp"
         android:ems="10"
         android:hint="Email"
-        android:textColorHint="#FFFFFF"
         android:inputType="textEmailAddress"
+        android:textColor="@android:color/white"
+        android:textColorHint="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -26,7 +27,7 @@
 
     <Button
         android:id="@+id/ResetPassword"
-        android:layout_width="80dp"
+        android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_marginBottom="260dp"
         android:layout_marginEnd="8dp"
