--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -13,12 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <ListView
             android:id="@+id/DeviceList"
-            android:layout_width="340dp"
-            android:layout_height="300dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="9dp"
+            android:textColor="@android:color/white"
+            android:textColorHint="#FFFFFF"
+            android:layout_width="370dp"
+            android:layout_height="250dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,10 +34,11 @@
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/piechart"
-            android:layout_width="340dp"
-            android:layout_height="275dp"
+            android:layout_width="370dp"
+            android:layout_height="260dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/DeviceList"></com.github.mikephil.charting.charts.PieChart>
+            android:layout_alignStart="@+id/DeviceList">
+        </com.github.mikephil.charting.charts.PieChart>
 
     </LinearLayout>
 
