--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#000C1F</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#ff4081</color>
+    <color name="primary_material_dark_1">#000c1f</color>
 </resources>
