--- a/app/src/main/res/menu/menu_my_account.xml
+++ b/app/src/main/res/menu/menu_my_account.xml
@@ -3,11 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/sign_out"
-        android:title="Sign Out" />
+        android:id="@+id/configure_device"
+        android:title="Configure Device" />
 
     <item android:id="@+id/settings"
         android:title="Settings"
         app:showAsAction=""/>
+
+    <item
+        android:id="@+id/sign_out"
+        android:title="Sign Out" />
 
 </menu>
