UI/Ux changes 15/3/2018 icons for nav

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#ff4081</color>
     <color name="primary_material_dark_1">#000c1f</color>
+    <color name="primary_dark_material_light">#000c1f</color>
 </resources>
