--- a/app/src/main/res/menu/menu_my_account.xml
+++ b/app/src/main/res/menu/menu_my_account.xml
@@ -4,16 +4,19 @@
 
     <item
         android:id="@+id/configure_device"
+        android:title="Configure Device"
+        android:icon="@mipmap/linkdevice"
+        />
 
-        android:title="Configure Device" />
-
-    <item android:id="@+id/settings"
+    <item
+        android:id="@+id/settings"
         android:title="Settings"
+        android:icon="@mipmap/settings"
         app:showAsAction=""/>
 
     <item
         android:id="@+id/sign_out"
         android:title="Sign Out"
-        android:icon="@mipmap/ic_signoutnavicon"/>
+        android:icon="@mipmap/signout"/>
 
 </menu>
