--- a/app/src/main/res/layout/activity_connected_device.xml
+++ b/app/src/main/res/layout/activity_connected_device.xml
@@ -31,7 +31,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <include layout="@layout/nav_action"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/piechartConnected"
@@ -46,12 +50,13 @@
     <android.support.design.widget.NavigationView
         android:id="@+id/NavConnected"
         android:layout_width="wrap_content"
-
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:itemTextColor="@android:color/black"
-        app:menu="@menu/menu_my_account">
+        app:menu="@menu/menu_my_account"
+        app:itemIconTint="#000C1F"
+        app:headerLayout="@layout/nav_header">
 
     </android.support.design.widget.NavigationView>
 
