--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -16,12 +16,12 @@
 
         <ListView
             android:id="@+id/DeviceList"
-            android:textColor="@android:color/white"
-            android:textColorHint="#FFFFFF"
-            android:layout_width="370dp"
-            android:layout_height="250dp"
+            android:layout_width="450dp"
+            android:layout_height="300dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:textColor="@android:color/white"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,11 +38,10 @@
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/piechart"
-            android:layout_width="370dp"
+            android:layout_width="450dp"
             android:layout_height="260dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/DeviceList">
-        </com.github.mikephil.charting.charts.PieChart>
+            android:layout_alignStart="@+id/DeviceList"></com.github.mikephil.charting.charts.PieChart>
 
     </LinearLayout>
 
