--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -14,17 +14,6 @@
         android:layout_height="match_parent">
 
 
-        <ListView
-            android:id="@+id/DeviceList"
-            android:layout_width="450dp"
-            android:layout_height="300dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:textColor="@android:color/white"
-            android:textColorHint="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </RelativeLayout>
 
     <LinearLayout
@@ -39,9 +28,23 @@
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/piechart"
             android:layout_width="450dp"
-            android:layout_height="260dp"
+            android:layout_height="350dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/DeviceList"></com.github.mikephil.charting.charts.PieChart>
+            android:layout_alignStart="@+id/DeviceList">
+
+        </com.github.mikephil.charting.charts.PieChart>
+
+        <ListView
+            android:id="@+id/DeviceList"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:textColor="@android:color/white"
+            android:textColorHint="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </LinearLayout>
 
