--- a/app/src/main/res/drawable/button_effect.xml
+++ b/app/src/main/res/drawable/button_effect.xml
@@ -6,9 +6,9 @@
         android:endColor="#FFCE00"
         />
     <!-- this is make corners of button rounded -->
-    <corners    android:topLeftRadius="40dip"
-        android:bottomRightRadius="40dip"
-        android:topRightRadius="40dip"
-        android:bottomLeftRadius="40dip"/>
+    <corners    android:topLeftRadius="2.3dp"
+        android:bottomRightRadius="2.3dp"
+        android:topRightRadius="2.3dp"
+        android:bottomLeftRadius="2.3dp"/>
 
 </shape>
