--- a/app/src/main/res/drawable/email_edittext.xml
+++ b/app/src/main/res/drawable/email_edittext.xml
@@ -2,19 +2,19 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:height="40dp"
-          android:width="50dp">
+          android:width="30dp">
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
 
             android:shape="rectangle">
-            <solid android:color="#00348D"/>
+            <solid android:color="#FFCE00"/>
             <corners android:bottomLeftRadius="2.3dp"
                 android:topLeftRadius="2.3dp"/>
         </shape>
     </item>
 
-    <item android:width="28dp"
-        android:height="20dp"
+    <item android:width="20dp"
+        android:height="15dp"
         android:gravity="center"
         android:drawable="@drawable/email"/>
 
