--- a/app/src/main/res/drawable/password_edittext.xml
+++ b/app/src/main/res/drawable/password_edittext.xml
@@ -7,13 +7,13 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
 
             android:shape="rectangle">
-            <solid android:color="#00348D"/>
+            <solid android:color="#FFCE00"/>
             <corners android:bottomLeftRadius="2.3dp"
                 android:topLeftRadius="2.3dp"/>
         </shape>
     </item>
 
-    <item android:width="17dp"
+    <item android:width="15dp"
         android:height="20dp"
         android:gravity="center"
         android:drawable="@drawable/lock"/>
