--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -15,19 +15,6 @@
         android:layout_below="@+id/ApplianceName"
         android:layout_marginTop="32dp"></com.github.mikephil.charting.charts.BarChart>
 
-    <Button
-        android:id="@+id/RefreshGraph"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:layout_below="@+id/barchart"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp"
-        android:background="@drawable/button_selector"
-        android:text="REFRESH"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/ApplianceName"
@@ -35,10 +22,11 @@
         android:layout_height="35dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="41dp"
         android:gravity="center_vertical|center_horizontal"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
