--- a/app/src/main/res/layout/activity_connected_device.xml
+++ b/app/src/main/res/layout/activity_connected_device.xml
@@ -8,6 +8,7 @@
     android:background="#000C1F"
     tools:context="com.example.ankit.awareness.ConnectedDeviceActivity">
 
+
     <RelativeLayout
 
         android:layout_width="match_parent"
@@ -16,12 +17,12 @@
 
         <ListView
             android:id="@+id/DeviceListConnected"
-            android:textColor="@android:color/white"
-            android:textColorHint="#FFFFFF"
-            android:layout_width="370dp"
+            android:layout_width="450dp"
             android:layout_height="250dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:textColor="@android:color/white"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,11 +39,18 @@
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/piechartConnected"
-            android:layout_width="370dp"
-            android:layout_height="260dp"
+            android:layout_width="450dp"
+            android:layout_height="320dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/DeviceListConnected">
-        </com.github.mikephil.charting.charts.PieChart>
+            android:layout_alignStart="@+id/DeviceListConnected"></com.github.mikephil.charting.charts.PieChart>
+
+        <ImageView
+            android:id="@+id/batteryanimation"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:backgroundTint="@android:color/white" />
 
     </LinearLayout>
 
