--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -16,33 +16,33 @@
 
         <ListView
             android:id="@+id/DeviceListLive"
-            android:textColor="@android:color/white"
-            android:textColorHint="#FFFFFF"
-            android:layout_width="370dp"
+            android:layout_width="450dp"
             android:layout_height="250dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:textColor="@android:color/white"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/nav_action"
+        <include
+            layout="@layout/nav_action"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/piechartLive"
-            android:layout_width="370dp"
-            android:layout_height="260dp"
+            android:layout_width="450dp"
+            android:layout_height="320dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/DeviceListLive">
-        </com.github.mikephil.charting.charts.PieChart>
+            android:layout_alignStart="@+id/DeviceListLive"></com.github.mikephil.charting.charts.PieChart>
 
     </LinearLayout>
 
